test/functional/Sema/ambiguous_overload_candidates.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

// Define overloaded functions with the same name but different return types
func getValue() -> Int {
    return 42;
}

func getValue() -> Float {
    return 3.14;
}

func main() -> Int {
    // This should trigger ambiguous overload resolution
    // The compiler won't be able to determine which getValue() to call
    // without additional type context
    let x = getValue();
    // CHECK: note: getValue() -> i32
    // CHECK: note: getValue() -> f32
    // CHECK: error: Ambiguous type variable mapping found: multiple valid solutions exist
    // CHECK: note: Consider adding explicit type annotations to resolve the ambiguity
    // CHECK: note: Could resolve as:
    
    return 0;
}